Fastdebug build failing on jdk9/hs/ control jobs after pulling some hs-comp changes

XMLWordPrintable

    • b20

        Fastdebug build failing on linux, macos and windows for jdk9/hs/ control job after pulling some hs-comp changes. Fails building deploy:

        # To suppress the following error report, specify this argument
        # after -XX: or in .hotspotrc: SuppressErrorAt=/node.hpp:708
        #
        # A fatal error has been detected by the Java Runtime Environment:
        #
        # Internal Error (/opt/jprt/T/P1/203548.amurillo/s/hotspot/src/share/vm/opto/node.hpp:708), pid=32317, tid=2190506896
        # assert(is_Bool()) failed: invalid node class
        #
        # JRE version: Java(TM) SE Runtime Environment (9.0-b16) (build 1.9.0-internal-fastdebug-201406062035.amurillo.jdk9-hs-2014-06-06-b16)
        # Java VM: Java HotSpot(TM) Server VM (1.9.0-internal-fastdebug-201406062035.amurillo.jdk9-hs-2014-06-06-b16-fastdebug mixed mode linux-x86 )
        # Core dump written. Default location: /opt/jprt/T/P1/203548.amurillo/s/deploy/make/plugin/java/core or core.32317
        #
        # An error report file with more information is saved as:
        # /opt/jprt/T/P1/203548.amurillo/s/deploy/make/plugin/java/hs_err_pid32317.log
        #
        # Compiler replay data is saved as:
        # /opt/jprt/T/P1/203548.amurillo/s/deploy/make/plugin/java/replay_pid32317.log
        #

          1. hs_err_pid81295.log
            28 kB
            Vladimir Kozlov
          2. replay_pid81295.log
            87 kB
            Vladimir Kozlov
          3. windows_x64_6.1-fastdebug.log.FAILED.log
            8.97 MB
            Alejandro Murillo
          4. linux_i586_2.6-fastdebug.log.FAILED.log
            8.34 MB
            Alejandro Murillo
          5. macosx_x64_10.7-fastdebug.log.FAILED.log
            9.00 MB
            Alejandro Murillo

              Assignee:
              Vladimir Kozlov
              Reporter:
              Alejandro Murillo
              Votes:
              0 Vote for this issue
              Watchers:
              5 Start watching this issue

                Created:
                Updated:
                Resolved: