8046275: Fastdebug build failing on jdk9/hs/ control jobs after pulling some hs-comp changes

Add missing check for Opaque nodes from loop predicates in clone_loop().

Reviewed-by: iveresov